<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".fragments.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/loginTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/login_title"
                android:textColor="@color/black"
                android:textSize="@dimen/titleTextSize"
                android:textStyle="bold"
                style="@style/TextViewStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/selectTextTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="12dp"
                android:text="@string/select_username_and_password_from_below"
                android:textColor="@color/black"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginTV" />

            <TextView
                android:id="@+id/usernameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="18dp"
                style="@style/TextViewStyle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectTextTV" />

            <RelativeLayout
                android:id="@+id/nameRL"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_bg_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameTV">

                <EditText
                    android:id="@+id/nameET"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <ImageView
                    android:id="@+id/usernameErrorIV"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/indicates_error"
                    android:src="@drawable/alert"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/nameErrorTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/username_is_required"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_goneMarginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameRL" />

            <TextView
                android:id="@+id/passwordTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                style="@style/TextViewStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameErrorTV" />

            <RelativeLayout
                android:id="@+id/passwordRL"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_bg_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordTV">

                <EditText
                    android:id="@+id/passwordET"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />

                <ImageView
                    android:id="@+id/passwordErrorIV"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/indicates_error"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/alert"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/passwordErrorTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/password_is_required"
                android:textColor="@color/red"
                android:visibility="invisible"
                style="@style/TextViewStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordRL" />

            <LinearLayout
                android:id="@+id/buttonLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordErrorTV">

                <ImageButton
                    android:id="@+id/bioMetricIB"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="5"
                    android:background="@drawable/login_button_bg"
                    android:padding="10dp"
                    android:contentDescription="@string/tap_to_login_using_biometric_verification"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_touch_id"
                    android:textAllCaps="false"
                    android:visibility="gone" />

                <android.widget.Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login_button_bg"
                    android:text="@string/login_title"
                    android:contentDescription="@string/tap_to_login_with_given_credentials"
                    style="@style/TextViewStyle"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/savedNamesTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:text="@string/usernames"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                style="@style/TextViewStyle"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintEnd_toStartOf="@+id/savedPasswordTV"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/buttonLL"
                app:layout_constraintTop_toBottomOf="@id/buttonLL" />

            <TextView
                android:id="@+id/savedPasswordTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="22dp"
                style="@style/TextViewStyle"
                android:textStyle="bold"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toEndOf="@+id/buttonLL"
                app:layout_constraintStart_toEndOf="@id/savedNamesTV"
                app:layout_constraintTop_toBottomOf="@id/buttonLL" />

            <TextView
                android:id="@+id/username1TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/bod_example_com"
                style="@style/TextViewStyle"
                android:contentDescription="@string/tap_to_use_this_username_for_login"
                android:textColor="@drawable/text_bg"
                app:layout_constraintEnd_toStartOf="@+id/password1TV"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/savedNamesTV"
                app:layout_constraintTop_toBottomOf="@id/savedNamesTV" />

            <TextView
                android:id="@+id/password1TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="10203040"
                app:layout_constraintEnd_toEndOf="@+id/savedPasswordTV"
                app:layout_constraintHorizontal_weight="1"
                style="@style/TextViewStyle"
                app:layout_constraintStart_toStartOf="@+id/savedPasswordTV"
                app:layout_constraintTop_toBottomOf="@id/savedPasswordTV" />

            <TextView
                android:id="@+id/username2TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/alice_example_com_locked_out"
                android:textColor="@drawable/text_bg"
                style="@style/TextViewStyle"
                android:contentDescription="@string/tap_to_use_this_username_for_login"
                app:layout_constraintEnd_toStartOf="@+id/password1TV"
                app:layout_constraintHorizontal_weight="1.5"
                app:layout_constraintStart_toStartOf="@id/username1TV"
                app:layout_constraintTop_toBottomOf="@id/username1TV" />

            <TextView
                android:id="@+id/password2TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/TextViewStyle"
                app:layout_constraintEnd_toEndOf="@+id/savedPasswordTV"
                app:layout_constraintHorizontal_weight="0.8"
                app:layout_constraintStart_toStartOf="@+id/savedPasswordTV"
                app:layout_constraintTop_toBottomOf="@id/password1TV" />

            <TextView
                android:id="@+id/username3TV"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:contentDescription="@string/visual_user_login"
                android:focusable="true"
                android:text="@string/visual_example_com"
                android:textColor="@drawable/text_bg"
                app:layout_constraintEnd_toStartOf="@+id/password2TV"
                app:layout_constraintHorizontal_weight="1.5"
                app:layout_constraintStart_toStartOf="@id/username2TV"
                app:layout_constraintTop_toBottomOf="@id/username2TV" />

            <TextView
                android:id="@+id/password3TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/TextViewStyle"
                app:layout_constraintEnd_toEndOf="@+id/savedPasswordTV"
                app:layout_constraintHorizontal_weight="0.8"
                app:layout_constraintStart_toStartOf="@+id/savedPasswordTV"
                app:layout_constraintTop_toBottomOf="@id/password2TV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>