...
	<string name="biomatric_message">Biometric is or not supported or not enable on your device. Please check your device or your settings.</string>
	<string name="bod_example_com"><u>bod@example.com</u></string>
	<string name="alice_example_com_locked_out"><u>alice@example.com (locked out)</u></string>
	<string name="visual_example_com"><u>visual@example.com</u></string>
	<string name="visual_user_login">Visual User Login</string>
	<string name="items">Items</string>
	<string name="enter_password">Enter Password</string>
	<string name="soory_this_user_has_been_locked_out">Sorry this user has been locked out.</string>
	<string name="you_have_successfully_loggedout">You are Successfully logged out.</string>
	<string name="sauce_labs_all_rights_reserved_terms_of_service_privacy_policy">&#169; 2023 Sauce Labs All Rights Reserved. Terms of Service | Privacy Policy</string>
	<string name="fingerprint">FingerPrint</string>
	<string name="virtual_usb">Virtual USB</string>
	<string name="_continue">Continue</string>
...
	<string name="linkedin">LinkedIn</string>
	<string name="scrollview_manages_views_in_given_screen_size">Scrollview manages views in given screen size</string>
	<string name="displays_selected_products">Displays selected products</string>
	<string name="manages_scrolling_of_views_in_given_screen">Manages scrolling of views in given screen</string>
	<string name="completes_the_process_of_checkout">Completes the process of checkout</string>
	<string name="indicates_error">Indicates error</string>
	<string name="username_is_required">Username is required</string>
	<string name="password_is_required">Password is required</string>
	<string name="tap_to_login_with_given_credentials">Tap to login with given credentials</string>
	<string name="tap_to_use_this_username_for_login">Tap to use this username for login</string>
	<string name="tap_to_visit_given_web_address">Tap to visit given web address</string>
	<string name="start_observation_of_user_location">Start observation of user location</string>
	<string name="stop_observation_of_user_location">Stop observation of user location</string>
...
