...
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">


        <ImageView
            android:id="@+id/menuIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
