...
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="@dimen/_0"
            android:layout_height="@dimen/_0"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/scrollview_manages_views_in_given_screen_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productRV"
                    android:layout_width="@dimen/_0"
                    android:contentDescription="@string/displays_all_products_of_catalog"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="yes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
